--- a/pages/7673.html
+++ b/pages/7673.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/3853/#Item_15" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/3853/#Item_16" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -802,6 +802,22 @@ margin-left: 0em;
 </ol>
 </div>
 
+<p>Which can be restated in terms of representable profunctors as follows. A cwf consists of</p>
+
+<ol>
+<li>a category <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>C</mi></mrow><annotation encoding="application/x-tex">C</annotation></semantics></math>,</li>
+
+<li>a presheaf <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Ty</mi><mo>:</mo><mover><mi>C</mi><mo stretchy="false">^</mo></mover></mrow><annotation encoding="application/x-tex">Ty : \hat C</annotation></semantics></math> of types in context.</li>
+
+<li>a presheaf <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Tm</mi><mo>:</mo><mover><mrow><mo>∫</mo><mi>Ty</mi></mrow><mo>^</mo></mover></mrow><annotation encoding="application/x-tex">Tm : \widehat {\int Ty}</annotation></semantics></math> of typed terms in context.</li>
+
+<li>a functor <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ext</mi><mo>:</mo><mover><mrow><mo>∫</mo><mi>Ty</mi></mrow><mo>^</mo></mover><mo>→</mo><mi>C</mi></mrow><annotation encoding="application/x-tex">ext : \widehat {\int Ty} \to C</annotation></semantics></math> of context extension that represents the profunctor <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mrow><mo>∫</mo><mi>Tm</mi></mrow><mo stretchy="false">(</mo><mo lspace="verythinmathspace" rspace="0em">−</mo><mo>,</mo><mi>ty</mi><mo>=</mo><mo stretchy="false">)</mo><mo>⊙</mo><mrow><mo>∫</mo><mi>Tm</mi></mrow><mo stretchy="false">(</mo><mi>ctx</mi><mo stretchy="false">(</mo><mi>ty</mi><mo stretchy="false">(</mo><mo lspace="verythinmathspace" rspace="0em">−</mo><mo stretchy="false">)</mo><mo stretchy="false">)</mo><mo>,</mo><mo>=</mo><mo stretchy="false">)</mo><mo>:</mo><mo>∫</mo><mi>Ty</mi><mi>⇸</mi><mi>C</mi></mrow><annotation encoding="application/x-tex">{\int Tm}(-,ty=) \odot {\int Tm}(ctx(ty(-)),=) : \int Ty &amp;#8696; C</annotation></semantics></math> where <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ty</mi><mo>:</mo><mo>∫</mo><mi>Tm</mi><mo>→</mo><mo>∫</mo><mi>Ty</mi></mrow><annotation encoding="application/x-tex">ty : \int Tm \to \int Ty</annotation></semantics></math> and <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ctx</mi><mo>:</mo><mo>∫</mo><mi>Ty</mi><mo>→</mo><mi>C</mi></mrow><annotation encoding="application/x-tex">ctx : \int Ty \to C</annotation></semantics></math> are the projections of the <a class="existingWikiWord" href="/nlab/show/Grothendieck+construction">Grothendieck construction</a>.</li>
+</ol>
+
+<p>Writing the profunctor as P, it is equivalent to the following definition:</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>P</mi><mo stretchy="false">(</mo><mi>Δ</mi><mo>,</mo><mo stretchy="false">(</mo><mi>Γ</mi><mo>,</mo><mi>A</mi><mo stretchy="false">)</mo><mo stretchy="false">)</mo><mo>=</mo><mo stretchy="false">(</mo><mi>γ</mi><mo>:</mo><mi>Δ</mi><mo>→</mo><mi>Γ</mi><mo stretchy="false">)</mo><mo>×</mo><mo stretchy="false">(</mo><mi>a</mi><mo>:</mo><mi>Tm</mi><mo stretchy="false">(</mo><mi>Γ</mi><mo>,</mo><mi>A</mi><mo stretchy="false">[</mo><mi>γ</mi><mo stretchy="false">]</mo><mo stretchy="false">)</mo><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">P(\Delta, (\Gamma, A)) = (\gamma : \Delta \to \Gamma) \times (a : Tm(\Gamma, A[\gamma]))</annotation></semantics></math></div>
+<p>then the universal property of the context extension is that there is a natural isomorphism <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Δ</mi><mo>→</mo><mi>ext</mi><mo stretchy="false">(</mo><mi>Γ</mi><mo>,</mo><mi>A</mi><mo stretchy="false">)</mo><mo>≅</mo><mi>P</mi><mo stretchy="false">(</mo><mi>Δ</mi><mo>,</mo><mo stretchy="false">(</mo><mi>Γ</mi><mo>,</mo><mi>A</mi><mo stretchy="false">)</mo><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">\Delta \to ext(\Gamma, A) \cong P(\Delta,(\Gamma,A))</annotation></semantics></math></p>
+
 <h3 id="contextual_categories_or_csystems">Contextual categories, or C-systems</h3>
 
 <p>Recall that</p>
@@ -1133,7 +1149,7 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 19, 2018 at 10:42:53.
+  Last revised on October 19, 2018 at 11:10:17.
   See the <a href="https://ncatlab.org/nlab/history/categorical model of dependent types" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
