--- a/pages/5013.html
+++ b/pages/5013.html
@@ -803,7 +803,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<p>On the other hand, any finite simplicial complex <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi></mrow><annotation encoding="application/x-tex">X</annotation></semantics></math> is homotopy equivalent to its <a class="existingWikiWord" href="/nlab/show/barycentric+subdivision">barycentric subdivision</a>, which is the <a class="existingWikiWord" href="/nlab/show/geometric+realization">geometric realization</a> of the <a class="existingWikiWord" href="/nlab/show/poset">poset</a> of simplices ordered by inclusion. Thus finite posets model the weak homotopy types of finite simplicial complexes.</p>
+<p>On the other hand, any finite simplicial complex <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>K</mi></mrow><annotation encoding="application/x-tex">K</annotation></semantics></math> is homotopy equivalent to its <a class="existingWikiWord" href="/nlab/show/barycentric+subdivision">barycentric subdivision</a>. This is <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>B</mi><mi>P</mi><mi>K</mi></mrow><annotation encoding="application/x-tex">B P K</annotation></semantics></math>, the <a class="existingWikiWord" href="/nlab/show/geometric+realization">geometric realization</a> of the <a class="existingWikiWord" href="/nlab/show/nerve">nerve</a> of the <a class="existingWikiWord" href="/nlab/show/poset">poset</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>P</mi><mi>K</mi></mrow><annotation encoding="application/x-tex">P K</annotation></semantics></math> whose elements are simplices ordered by inclusion. Thus finite posets model the weak homotopy types of finite simplicial complexes.</p>
 </div>
 
 <h2 id="examples">Examples</h2>
@@ -879,14 +879,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 19, 2018 at 15:54:53.
+  Last revised on October 19, 2018 at 16:55:41.
   See the <a href="https://ncatlab.org/nlab/history/finite topological space" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/finite+topological+space" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/finite+topological+space/14" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(14 revisions)</span> | <a href="/nlab/show/diff/finite+topological+space" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/finite+topological+space" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/finite+topological+space" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/finite+topological+space/15" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(15 revisions)</span> | <a href="/nlab/show/diff/finite+topological+space" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/finite+topological+space" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/finite topological space/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
