--- a/pages/10066.html
+++ b/pages/10066.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/5146/#Item_9" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/5146/#Item_10" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -692,6 +692,10 @@ margin-left: 0em;
 </ul>
 <li><a href='#related_concepts'>Related concepts</a></li>
 <li><a href='#References'>References</a></li>
+<ul>
+<li><a href='#general'>General</a></li>
+<li><a href='#for_dbrane_charge_on_orbifolds'>For D-brane charge on orbifolds</a></li>
+</ul>
 </ul>
 </div>
 
@@ -873,6 +877,8 @@ margin-left: 0em;
 
 <h2 id="References">References</h2>
 
+<h3 id="general">General</h3>
+
 <p>The idea of equivariant <a class="existingWikiWord" href="/nlab/show/topological+K-theory">topological K-theory</a> and the <a class="existingWikiWord" href="/nlab/show/Atiyah-Segal+completion+theorem">Atiyah-Segal completion theorem</a> goes back to</p>
 
 <ul>
@@ -964,20 +970,36 @@ margin-left: 0em;
 <ul>
 <li id="Gomi17"><a class="existingWikiWord" href="/nlab/show/Kiyonori+Gomi">Kiyonori Gomi</a>, <em>Freed-Moore K-theory</em> (<a href="https://arxiv.org/abs/1705.09134">arXiv:1705.09134</a>)</li>
 </ul>
+
+<h3 id="for_dbrane_charge_on_orbifolds">For D-brane charge on orbifolds</h3>
+
+<p>The proposal that <a class="existingWikiWord" href="/nlab/show/D-brane+charge">D-brane charge</a> on <a class="existingWikiWord" href="/nlab/show/orbifolds">orbifolds</a> is given by <a class="existingWikiWord" href="/nlab/show/equivariant+K-theory">equivariant K-theory</a> goes back to</p>
+
+<ul>
+<li id="Witten98"><a class="existingWikiWord" href="/nlab/show/Edward+Witten">Edward Witten</a>, section 5.1 of <em>D-Branes And K-Theory</em>, JHEP 9812:019,1998 (<a href="http://arxiv.org/abs/hep-th/9810188">arXiv:hep-th/9810188</a>)</li>
+</ul>
+
+<p>but it was pointed out that only a subgroup or quotient group of equivariant K-theory can be physically relevant, in</p>
+
+<ul>
+<li id="BDHKMMS01"><a class="existingWikiWord" href="/nlab/show/Jan+de+Boer">Jan de Boer</a>, <a class="existingWikiWord" href="/nlab/show/Robbert+Dijkgraaf">Robbert Dijkgraaf</a>, <a class="existingWikiWord" href="/nlab/show/Kentaro+Hori">Kentaro Hori</a>, <a class="existingWikiWord" href="/nlab/show/Arjan+Keurentjes">Arjan Keurentjes</a>, <a class="existingWikiWord" href="/nlab/show/John+Morgan">John Morgan</a>, <a class="existingWikiWord" href="/nlab/show/David+Morrison">David Morrison</a>, <a class="existingWikiWord" href="/nlab/show/Savdeep+Sethi">Savdeep Sethi</a>, around (137) of <em>Triples, Fluxes, and Strings</em>, Adv.Theor.Math.Phys. 4 (2002) 995-1186 (<a href="https://arxiv.org/abs/hep-th/0103170">arXiv:hep-th/0103170</a>)</li>
+</ul>
+
+<p>For further references see at <em><a class="existingWikiWord" href="/nlab/show/fractional+D-brane">fractional D-brane</a></em>.</p>
 </body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on October 10, 2018 at 04:43:38.
+  Last revised on October 20, 2018 at 05:31:34.
   See the <a href="https://ncatlab.org/nlab/history/equivariant K-theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/equivariant+K-theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/equivariant+K-theory/26" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(26 revisions)</span> | <a href="/nlab/show/diff/equivariant+K-theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/equivariant+K-theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/equivariant+K-theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/equivariant+K-theory/27" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(27 revisions)</span> | <a href="/nlab/show/diff/equivariant+K-theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/equivariant+K-theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/equivariant K-theory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
