--- a/pages/6713.html
+++ b/pages/6713.html
@@ -1145,7 +1145,19 @@ margin-left: 0em;
 <li id="AsakawaSugimotoTerashima01">T. Asakawa, S. Sugimoto, S. Terashima, <em>D-branes, Matrix Theory and K-homology</em>, JHEP 0203 (2002) 034 (<a href="https://arxiv.org/abs/hep-th/0108085">arXiv:hep-th/0108085</a>)</li>
 </ul>
 
-<p>Discussion of <a class="existingWikiWord" href="/nlab/show/equivariant+K-theory">equivariant K-theory</a> for D-branes on <a class="existingWikiWord" href="/nlab/show/orbifolds">orbifolds</a> includes the following:</p>
+<p>The proposal that D-brane charge on <a class="existingWikiWord" href="/nlab/show/orbifolds">orbifolds</a> is measured in <a class="existingWikiWord" href="/nlab/show/equivariant+K-theory">equivariant K-theory</a> goes back to</p>
+
+<ul>
+<li><a href="#Witten98">Witten 98, section 5.1</a></li>
+</ul>
+
+<p>but it was pointed out that only a subgroup of equivariant K-theory can be physically relevant in</p>
+
+<ul>
+<li id="BDHKMMS01"><a class="existingWikiWord" href="/nlab/show/Jan+de+Boer">Jan de Boer</a>, <a class="existingWikiWord" href="/nlab/show/Robbert+Dijkgraaf">Robbert Dijkgraaf</a>, <a class="existingWikiWord" href="/nlab/show/Kentaro+Hori">Kentaro Hori</a>, <a class="existingWikiWord" href="/nlab/show/Arjan+Keurentjes">Arjan Keurentjes</a>, <a class="existingWikiWord" href="/nlab/show/John+Morgan">John Morgan</a>, <a class="existingWikiWord" href="/nlab/show/David+Morrison">David Morrison</a>, <a class="existingWikiWord" href="/nlab/show/Savdeep+Sethi">Savdeep Sethi</a>, around (137) of <em>Triples, Fluxes, and Strings</em>, Adv.Theor.Math.Phys. 4 (2002) 995-1186 (<a href="https://arxiv.org/abs/hep-th/0103170">arXiv:hep-th/0103170</a>)</li>
+</ul>
+
+<p>Further discussion of <a class="existingWikiWord" href="/nlab/show/equivariant+K-theory">equivariant K-theory</a> for D-branes on <a class="existingWikiWord" href="/nlab/show/orbifolds">orbifolds</a> includes the following:</p>
 
 <ul>
 <li>
@@ -1272,14 +1284,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October  3, 2018 at 12:10:06.
+  Last revised on October 20, 2018 at 05:23:20.
   See the <a href="https://ncatlab.org/nlab/history/D-brane" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/D-brane" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/D-brane/63" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(63 revisions)</span> | <a href="/nlab/show/diff/D-brane" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/D-brane" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/D-brane" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/D-brane/64" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(64 revisions)</span> | <a href="/nlab/show/diff/D-brane" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/D-brane" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/D-brane/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
