--- a/pages/4691.html
+++ b/pages/4691.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/1802/#Item_41" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/1802/#Item_42" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -601,8 +601,14 @@ margin-left: 0em;
 
 <p><a href="#RelativeEntropy">Relative entropy</a> of <a class="existingWikiWord" href="/nlab/show/states">states</a> on <a class="existingWikiWord" href="/nlab/show/von+Neumann+algebras">von Neumann algebras</a> was introduced in</p>
 
-<ul id="Araki">
-<li><a class="existingWikiWord" href="/nlab/show/Huzihiro+Araki">Huzihiro Araki</a>, <em>Relative Entropy of States of von Neumann Algebras</em> (<a href="http://www.google.de/url?sa=t&amp;source=web&amp;cd=5&amp;ved=0CEsQFjAE&amp;url=http%3A%2F%2Fwww.ems-ph.org%2Fjournals%2Fshow_pdf.php%3Fissn%3D0034-5318%26vol%3D11%26iss%3D3%26rank%3D9&amp;rct=j&amp;q=entropy%20cocycle%20von%20Neumann%20algebra&amp;ei=n3jrTYyxOI-c-waJvMnPDw&amp;usg=AFQjCNGuJgVUE7CtGPmb2PZLhOOWt1_JPQ&amp;cad=rja">pdf</a>)</li>
+<ul>
+<li id="Araki"><a class="existingWikiWord" href="/nlab/show/Huzihiro+Araki">Huzihiro Araki</a>, <em>Relative Entropy of States of von Neumann Algebras</em> (<a href="http://www.google.de/url?sa=t&amp;source=web&amp;cd=5&amp;ved=0CEsQFjAE&amp;url=http%3A%2F%2Fwww.ems-ph.org%2Fjournals%2Fshow_pdf.php%3Fissn%3D0034-5318%26vol%3D11%26iss%3D3%26rank%3D9&amp;rct=j&amp;q=entropy%20cocycle%20von%20Neumann%20algebra&amp;ei=n3jrTYyxOI-c-waJvMnPDw&amp;usg=AFQjCNGuJgVUE7CtGPmb2PZLhOOWt1_JPQ&amp;cad=rja">pdf</a>)</li>
+</ul>
+
+<p>Survey with an eye towards <a class="existingWikiWord" href="/nlab/show/black+hole+entropy">black hole entropy</a> includes</p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/Ted+Jacobson">Ted Jacobson</a>, <em>Entropy from Carnot to Bekenstein</em> (<a href="https://arxiv.org/abs/1810.07839">arXiv:1810.07839</a>)</li>
 </ul>
 
 <p>A survey of entropy in <a class="existingWikiWord" href="/nlab/show/operator+algebras">operator algebras</a> is in</p>
@@ -662,14 +668,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 14, 2018 at 06:56:15.
+  Last revised on October 20, 2018 at 08:10:54.
   See the <a href="https://ncatlab.org/nlab/history/entropy" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/entropy" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/entropy/38" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(38 revisions)</span> | <a href="/nlab/show/diff/entropy" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/entropy" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/entropy" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/entropy/39" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(39 revisions)</span> | <a href="/nlab/show/diff/entropy" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/entropy" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/entropy/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
