--- a/pages/19851.html
+++ b/pages/19851.html
@@ -397,6 +397,8 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/Simon+Huber">Simon Huber</a></li>
 
 <li><span class="newWikiWord">Andrew Polonsky<a href="/nlab/new/Andrew+Polonsky">?</a></span></li>
+
+<li><a class="existingWikiWord" href="/nlab/show/Thomas+Streicher">Thomas Streicher</a></li>
 </ul>
 </body></html>
 
@@ -404,14 +406,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 19, 2018 at 07:39:14.
+  Last revised on October 20, 2018 at 15:26:22.
   See the <a href="https://ncatlab.org/nlab/history/Initiality Project - Participants" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Initiality+Project+-+Participants" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Initiality+Project+-+Participants/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Initiality+Project+-+Participants" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Initiality+Project+-+Participants" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Initiality+Project+-+Participants" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Initiality+Project+-+Participants/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/Initiality+Project+-+Participants" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Initiality+Project+-+Participants" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Initiality Project - Participants/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
