--- a/pages/2677.html
+++ b/pages/2677.html
@@ -477,7 +477,7 @@ margin-left: 0em;
 <li><a href='#function_field_analogy'>Function field analogy</a></li>
 <li><a href='#AlgebraOverF1'>Algebra over <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>𝔽</mi> <mn>1</mn></msub></mrow><annotation encoding="application/x-tex">\mathbb{F}_1</annotation></semantics></math></a></li>
 <ul>
-<li><a href='#Modules'>Modules</a></li>
+<li><a href='#Modules'>Modules/Vector spaces over <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>𝔽</mi> <mn>1</mn></msub></mrow><annotation encoding="application/x-tex">\mathbb{F}_1</annotation></semantics></math></a></li>
 <li><a href='#algebraic_ktheory'>Algebraic K-theory</a></li>
 </ul>
 <li><a href='#related_concepts'>Related concepts</a></li>
@@ -570,13 +570,20 @@ margin-left: 0em;
 </tbody></table>
 <h2 id="AlgebraOverF1">Algebra over <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>𝔽</mi> <mn>1</mn></msub></mrow><annotation encoding="application/x-tex">\mathbb{F}_1</annotation></semantics></math></h2>
 
-<h3 id="Modules">Modules</h3>
+<h3 id="Modules">Modules/Vector spaces over <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>𝔽</mi> <mn>1</mn></msub></mrow><annotation encoding="application/x-tex">\mathbb{F}_1</annotation></semantics></math></h3>
 
-<p>It makes sense to identify the concept of <a class="existingWikiWord" href="/nlab/show/modules">modules</a> over the field with one element with that of (<a class="existingWikiWord" href="/nlab/show/pointed+set">pointed</a>) <a class="existingWikiWord" href="/nlab/show/finite+sets">finite sets</a></p>
-<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msub><mi>𝔽</mi> <mn>1</mn></msub><mi>Mod</mi><mspace width="thickmathspace"></mspace><mo>≃</mo><mspace width="thickmathspace"></mspace><msup><mi>FinSet</mi> <mrow><mo>*</mo><mo stretchy="false">/</mo></mrow></msup></mrow><annotation encoding="application/x-tex">
-  \mathbb{F}_1 Mod
+<p>It makes good sense to identify the concept of finite rank <a class="existingWikiWord" href="/nlab/show/modules">modules</a>/<a class="existingWikiWord" href="/nlab/show/finite-dimensional+vector+spaces">finite-dimensional vector spaces</a> over the field with one element with that of (<a class="existingWikiWord" href="/nlab/show/pointed+set">pointed</a>) <a class="existingWikiWord" href="/nlab/show/finite+sets">finite sets</a></p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msub><mi>𝔽</mi> <mn>1</mn></msub><msub><mi>Mod</mi> <mi>fin</mi></msub><mspace width="thickmathspace"></mspace><mo>≃</mo><mspace width="thickmathspace"></mspace><msubsup><mi>Set</mi> <mi>fin</mi> <mrow><mo>*</mo><mo stretchy="false">/</mo></mrow></msubsup></mrow><annotation encoding="application/x-tex">
+  \mathbb{F}_1 Mod_{fin}
   \;\simeq\;
-  FinSet^{\ast/}
+  Set^{\ast/}_{fin}
+
+</annotation></semantics></math></div>
+<p>and hence the <a class="existingWikiWord" href="/nlab/show/symmetric+group">symmetric group</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>Σ</mi> <mi>n</mi></msub></mrow><annotation encoding="application/x-tex">\Sigma_n</annotation></semantics></math> on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math> <a class="existingWikiWord" href="/nlab/show/elements">elements</a> with the <a class="existingWikiWord" href="/nlab/show/general+linear+group">general linear group</a> over <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>𝔽</mi> <mn>1</mn></msub></mrow><annotation encoding="application/x-tex">\mathbb{F}_1</annotation></semantics></math>:</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>GL</mi><mo stretchy="false">(</mo><mi>n</mi><mo>,</mo><msub><mi>𝔽</mi> <mn>1</mn></msub><mo stretchy="false">)</mo><mspace width="thickmathspace"></mspace><mo>≃</mo><mspace width="thickmathspace"></mspace><msub><mi>Σ</mi> <mi>n</mi></msub></mrow><annotation encoding="application/x-tex">
+  GL(n,\mathbb{F}_1)
+  \;\simeq\;
+  \Sigma_n
 
 </annotation></semantics></math></div>
 <p>(e.g. <a href="#Cohn04">Cohn 04, “puzzle 1”</a>, <a href="#Durov07">Durov 07, 2.5.6</a>, <a href="#Snyder07">Snyder 07</a>)</p>
@@ -775,14 +782,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 26, 2018 at 13:31:32.
+  Last revised on October 21, 2018 at 02:59:53.
   See the <a href="https://ncatlab.org/nlab/history/field with one element" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/field+with+one+element" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/field+with+one+element/40" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(40 revisions)</span> | <a href="/nlab/show/diff/field+with+one+element" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/field+with+one+element" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/field+with+one+element" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/field+with+one+element/41" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(41 revisions)</span> | <a href="/nlab/show/diff/field+with+one+element" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/field+with+one+element" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/field with one element/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
