--- a/pages/8003.html
+++ b/pages/8003.html
@@ -828,12 +828,12 @@ margin-left: 0em;
 
 <p><strong>(ordinary <a class="existingWikiWord" href="/nlab/show/algebraic+K-theory">algebraic K-theory</a>)</strong></p>
 
-<p>For <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>R</mi></mrow><annotation encoding="application/x-tex">R</annotation></semantics></math> a <a class="existingWikiWord" href="/nlab/show/commutative+ring">commutative ring</a>, let <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝒞</mi><mo>=</mo><mi>R</mi><msub><mi>Mod</mi> <mi>pr</mi></msub></mrow><annotation encoding="application/x-tex">\mathcal{C} = R Mod_{pr}</annotation></semantics></math> its <a class="existingWikiWord" href="/nlab/show/category+of+modules">category of</a> <a class="existingWikiWord" href="/nlab/show/projective+modules">projective modules</a> regared as a <a class="existingWikiWord" href="/nlab/show/permutative+category">permutative category</a>. Then</p>
-<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>K</mi><mo stretchy="false">(</mo><mi>R</mi><msub><mi>Mod</mi> <mi>pr</mi></msub><mo stretchy="false">)</mo><mspace width="thickmathspace"></mspace><mo>≃</mo><mspace width="thickmathspace"></mspace><mi>K</mi><mi>R</mi></mrow><annotation encoding="application/x-tex">
-  K (R Mod_{pr}) \;\simeq\; K R
+<p>For <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>R</mi></mrow><annotation encoding="application/x-tex">R</annotation></semantics></math> a <a class="existingWikiWord" href="/nlab/show/commutative+ring">commutative ring</a>, let <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝒞</mi><mo>=</mo><mi>R</mi><msub><mi>Mod</mi> <mi>pr</mi></msub></mrow><annotation encoding="application/x-tex">\mathcal{C} = R Mod_{pr}</annotation></semantics></math> its <a class="existingWikiWord" href="/nlab/show/category+of+modules">category of</a> <a class="existingWikiWord" href="/nlab/show/finitely+generated+module">finitely generated</a> <a class="existingWikiWord" href="/nlab/show/projective+modules">projective modules</a> regarded as a <a class="existingWikiWord" href="/nlab/show/permutative+category">permutative category</a>. Then</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>K</mi><mo stretchy="false">(</mo><mi>R</mi><msubsup><mi>Mod</mi> <mi>fin</mi> <mi>pr</mi></msubsup><mo stretchy="false">)</mo><mspace width="thickmathspace"></mspace><mo>≃</mo><mspace width="thickmathspace"></mspace><mi>K</mi><mi>R</mi></mrow><annotation encoding="application/x-tex">
+  K (R Mod^{pr}_{fin}) \;\simeq\; K R
 
 </annotation></semantics></math></div>
-<p>is the ordinary <a class="existingWikiWord" href="/nlab/show/algebraic+K-theory">algebraic K-theory</a> spectrum of the ring <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>R</mi></mrow><annotation encoding="application/x-tex">R</annotation></semantics></math>.</p>
+<p>is the classical <a class="existingWikiWord" href="/nlab/show/algebraic+K-theory">algebraic K-theory</a> spectrum of the ring <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>R</mi></mrow><annotation encoding="application/x-tex">R</annotation></semantics></math>.</p>
 </div>
 
 <p>(e.g. <a href="#ElmendorfMandell04">Elmendorf-Mandell 04, p. 10</a>).</p>
@@ -967,14 +967,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 11, 2018 at 09:14:35.
+  Last revised on October 21, 2018 at 07:33:15.
   See the <a href="https://ncatlab.org/nlab/history/K-theory of a permutative category" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/K-theory+of+a+permutative+category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/K-theory+of+a+permutative+category/14" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(14 revisions)</span> | <a href="/nlab/show/diff/K-theory+of+a+permutative+category" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/K-theory+of+a+permutative+category" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/K-theory+of+a+permutative+category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/K-theory+of+a+permutative+category/15" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(15 revisions)</span> | <a href="/nlab/show/diff/K-theory+of+a+permutative+category" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/K-theory+of+a+permutative+category" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/K-theory of a permutative category/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
