--- a/pages/17004.html
+++ b/pages/17004.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/8970/#Item_14" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8970/#Item_15" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -907,6 +907,8 @@ margin-left: 0em;
 
 <h3 id="AsAlgebraicKTheoryOverTheFieldWithOneElement">As algebraic K-theory over <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>𝔽</mi> <mn>1</mn></msub></mrow><annotation encoding="application/x-tex">\mathbb{F}_1</annotation></semantics></math></h3>
 
+<p>The following is known as the <em>Barratt-Priddy-Quillen theorem</em>:</p>
+
 <div class="num_prop" id="StableCohomotopyIsKTheoryOfFinSet">
 <h6 id="proposition">Proposition</h6>
 
@@ -920,7 +922,7 @@ margin-left: 0em;
 <p>is represented by the <a class="existingWikiWord" href="/nlab/show/sphere+spectrum">sphere spectrum</a>, hence is stable cohomotopy.</p>
 </div>
 
-<p>(due to <a href="#Segal74">Segal 74, Prop. 3.5</a>, see also <a href="#Priddy73">Priddy 73</a>)</p>
+<p>This is due to <a href="#BarrattPriddy72">Barratt-Priddy 72</a> reproved in <a href="#Segal74">Segal 74, Prop. 3.5</a>. See also <a href="#Priddy73">Priddy 73</a>, <a href="#Glasman13">Glasman 13</a>.</p>
 
 <div class="num_remark" id="StableCohomotopyIsAlgebraicKTheoryOverFieldWithOneElement">
 <h6 id="remark">Remark</h6>
@@ -979,13 +981,25 @@ margin-left: 0em;
 <p>The identification of stable cohomotopy with the <a class="existingWikiWord" href="/nlab/show/K-theory+of+a+permutative+category">K-theory of the permutative category</a> of <a class="existingWikiWord" href="/nlab/show/finite+set">finite set</a> is due to</p>
 
 <ul>
-<li id="Segal74"><a class="existingWikiWord" href="/nlab/show/Graeme+Segal">Graeme Segal</a>, <em>Categories and cohomology theories</em>, Topology vol 13, pp. 293-312, 1974 (<a href="http://ncatlab.org/nlab/files/SegalCategoriesAndCohomologyTheories.pdf">pdf</a>)</li>
+<li id="BarrattPriddy72">
+<p><a class="existingWikiWord" href="/nlab/show/Michael+Barratt">Michael Barratt</a>, <a class="existingWikiWord" href="/nlab/show/Stewart+Priddy">Stewart Priddy</a>, <em>On the homology of non-connected monoids and their associated groups</em>, Commentarii Mathematici Helvetici, December 1972, Volume 47, Issue 1, pp 1–14 (<a href="https://doi.org/10.1007/BF02566785">doi:10.1007/BF02566785</a>)</p>
+</li>
+
+<li id="Segal74">
+<p><a class="existingWikiWord" href="/nlab/show/Graeme+Segal">Graeme Segal</a>, <em>Categories and cohomology theories</em>, Topology vol 13, pp. 293-312, 1974 (<a href="http://ncatlab.org/nlab/files/SegalCategoriesAndCohomologyTheories.pdf">pdf</a>)</p>
+</li>
 </ul>
 
 <p>see also</p>
 
 <ul>
-<li id="Priddy73"><a class="existingWikiWord" href="/nlab/show/Stewart+Priddy">Stewart Priddy</a>, <em>Transfer, symmetric groups, and stable homotopy theory</em>, in <em>Higher K-Theories</em>, Springer, Berlin, Heidelberg, 1973. 244-255 (<a href="https://link.springer.com/content/pdf/10.1007/BFb0067060.pdf">pdf</a>)</li>
+<li id="Priddy73">
+<p><a class="existingWikiWord" href="/nlab/show/Stewart+Priddy">Stewart Priddy</a>, <em>Transfer, symmetric groups, and stable homotopy theory</em>, in <em>Higher K-Theories</em>, Springer, Berlin, Heidelberg, 1973. 244-255 (<a href="https://link.springer.com/content/pdf/10.1007/BFb0067060.pdf">pdf</a>)</p>
+</li>
+
+<li id="Glasman13">
+<p><a class="existingWikiWord" href="/nlab/show/Saul+Glasman">Saul Glasman</a>, <em>The multiplicative Barratt-Priddy-Quillen theorem and beyond</em>, talk 2013 (<a href="http://math.mit.edu/~sglasman/bpq-beamer.pdf">pdf</a>)</p>
+</li>
 </ul>
 
 <p>The resulting interpretation of stable cohomotopy as <a class="existingWikiWord" href="/nlab/show/algebraic+K-theory">algebraic K-theory</a> over the <a class="existingWikiWord" href="/nlab/show/field+with+one+element">field with one element</a> is amplified in the following texts:</p>
@@ -1030,7 +1044,7 @@ margin-left: 0em;
 <li id="KahnPriddy72"><a class="existingWikiWord" href="/nlab/show/Daniel+Kahn">Daniel Kahn</a>, <a class="existingWikiWord" href="/nlab/show/Stewart+Priddy">Stewart Priddy</a>, <em>Applications of the transfer to stable homotopy theory</em>, Bull. Amer. Math. Soc. Volume 78, Number 6 (1972), 981-987 (<a href="https://projecteuclid.org/euclid.bams/1183534135">Euclid</a>)</li>
 </ul>
 
-<p>The relation to <span class="newWikiWord">β-rings<a href="/nlab/new/%CE%B2-rings">?</a></span> is discussed in</p>
+<p>The relation to <a class="existingWikiWord" href="/nlab/show/%CE%B2-rings">β-rings</a> is discussed in</p>
 
 <ul>
 <li>
@@ -1073,14 +1087,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 11, 2018 at 11:06:50.
+  Last revised on October 21, 2018 at 08:37:37.
   See the <a href="https://ncatlab.org/nlab/history/stable cohomotopy" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/stable+cohomotopy" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/stable+cohomotopy/12" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(12 revisions)</span> | <a href="/nlab/show/diff/stable+cohomotopy" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/stable+cohomotopy" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/stable+cohomotopy" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/stable+cohomotopy/13" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(13 revisions)</span> | <a href="/nlab/show/diff/stable+cohomotopy" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/stable+cohomotopy" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/stable cohomotopy/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
