--- a/pages/16950.html
+++ b/pages/16950.html
@@ -526,7 +526,15 @@ margin-left: 0em;
 </div>
 
 <h1 id="contents">Contents</h1>
-<div class="maruku_toc"><ul><li><a href="#idea">Idea</a></li><li><a href="#properties">Properties</a></li><li><a href="#related_concepts">Related concepts</a></li><li><a href="#references">References</a></li></ul></div>
+<div class='maruku_toc'>
+<ul>
+<li><a href='#idea'>Idea</a></li>
+<li><a href='#properties'>Properties</a></li>
+<li><a href='#related_concepts'>Related concepts</a></li>
+<li><a href='#references'>References</a></li>
+</ul>
+</div>
+
 <h2 id="idea">Idea</h2>
 
 <p>A square <a class="existingWikiWord" href="/nlab/show/matrix">matrix</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><msub><mi>A</mi> <mrow><mi>x</mi><mo>,</mo><mi>y</mi></mrow></msub><mo stretchy="false">)</mo><mo>∈</mo><msub><mi>Mat</mi> <mrow><mi>n</mi><mo>×</mo><mi>n</mi></mrow></msub><mo stretchy="false">(</mo><mi>R</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">(A_{x,y})\in Mat_{n \times n}(R)</annotation></semantics></math> whose values for <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>x</mi><mo>≠</mo><mi>y</mi></mrow><annotation encoding="application/x-tex">x\neq y</annotation></semantics></math> are all <a class="existingWikiWord" href="/nlab/show/zero">zero</a> is called a <em>diagonal matrix</em>.</p>
@@ -552,7 +560,13 @@ margin-left: 0em;
 <p>See also</p>
 
 <ul>
-<li>Wikipedia, <em><a href="https://en.wikipedia.org/wiki/Diagonal_matrix">Diagonal matrices</a></em></li>
+<li>
+<p>Wikipedia, <em><a href="https://en.wikipedia.org/wiki/Diagonal_matrix">Diagonal matrices</a></em></p>
+</li>
+
+<li>
+<p>Wikipedia, <em><a href="https://en.wikipedia.org/wiki/Diagonalizable_matrix">Diagonalizable matrix</a></em></p>
+</li>
 </ul>
 </body></html>
 
@@ -560,14 +574,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 19, 2018 at 05:12:50.
+  Last revised on October 21, 2018 at 09:39:00.
   See the <a href="https://ncatlab.org/nlab/history/diagonal matrix" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/diagonal+matrix" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/diagonal+matrix/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/diagonal+matrix" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/diagonal+matrix" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/diagonal+matrix" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/diagonal+matrix/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/diagonal+matrix" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/diagonal+matrix" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/diagonal matrix/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
