--- a/pages/5634.html
+++ b/pages/5634.html
@@ -848,10 +848,20 @@ margin-left: 0em;
 </div>
 
 <h1 id="contents">Contents</h1>
-<div class="maruku_toc"><ul><li><a href="#idea">Idea</a></li><li><a href="#references">References</a><ul><li><a href="#for_the_bfield">For the B-field</a></li><li><a href="#ReferencesForTheCField">For the C-field</a></li></ul></li></ul></div>
+<div class='maruku_toc'>
+<ul>
+<li><a href='#idea'>Idea</a></li>
+<li><a href='#references'>References</a></li>
+<ul>
+<li><a href='#for_the_bfield'>For the B-field</a></li>
+<li><a href='#ReferencesForTheCField'>For the C-field</a></li>
+</ul>
+</ul>
+</div>
+
 <h2 id="idea">Idea</h2>
 
-<p>What is known in the literature as <em>discrete torsion</em> are phenomena of <a class="existingWikiWord" href="/nlab/show/equivariant+cohomology">equivariant</a> <a class="existingWikiWord" href="/nlab/show/ordinary+differential+cohomology">ordinary differential cohomology</a>, specifically of <a class="existingWikiWord" href="/nlab/show/circle+n-bundle+with+connection">circle 2-bundles with connection</a> (e.g. represented as <a class="existingWikiWord" href="/nlab/show/bundle+gerbes">bundle gerbes</a>) modelling the <a class="existingWikiWord" href="/nlab/show/B-field">B-field</a> in <a class="existingWikiWord" href="/nlab/show/string+theory">string theory</a> over <a class="existingWikiWord" href="/nlab/show/orbifold">orbifold</a> <a class="existingWikiWord" href="/nlab/show/spacetimes">spacetimes</a>.</p>
+<p>What is known in the literature as <em>discrete torsion</em> (<a href="#Vafa86">Vafa 86</a>) are phenomena of <a class="existingWikiWord" href="/nlab/show/equivariant+cohomology">equivariant</a> <a class="existingWikiWord" href="/nlab/show/ordinary+differential+cohomology">ordinary differential cohomology</a>, specifically of <a class="existingWikiWord" href="/nlab/show/circle+n-bundle+with+connection">circle 2-bundles with connection</a> (e.g. represented as <a class="existingWikiWord" href="/nlab/show/bundle+gerbes">bundle gerbes</a>) modelling the <a class="existingWikiWord" href="/nlab/show/B-field">B-field</a> in <a class="existingWikiWord" href="/nlab/show/string+theory">string theory</a> over <a class="existingWikiWord" href="/nlab/show/orbifold">orbifold</a> <a class="existingWikiWord" href="/nlab/show/spacetimes">spacetimes</a> (<a href="#Sharpe99">Sharpe 99</a>) and of <a class="existingWikiWord" href="/nlab/show/circle+n-bundle+with+connection">circle 3-bundles with connection</a> (e.g. represented as <a class="existingWikiWord" href="/nlab/show/bundle+2-gerbes">bundle 2-gerbes</a>) modelling the <a class="existingWikiWord" href="/nlab/show/supergravity+C-field">supergravity C-field</a> on <a class="existingWikiWord" href="/nlab/show/orbifolds">orbifolds</a> (<a href="#Sharpe00">Sharpe 00</a>), as in <a class="existingWikiWord" href="/nlab/show/M-theory+on+G2-manifolds">M-theory on G2-manifolds</a> with <a class="existingWikiWord" href="/nlab/show/ADE-singularities">ADE-singularities</a>.</p>
 
 <h2 id="references">References</h2>
 
@@ -866,7 +876,7 @@ margin-left: 0em;
 <p>and more specifically for <a class="existingWikiWord" href="/nlab/show/orbifolds">orbifolds</a> in <a class="existingWikiWord" href="/nlab/show/string+theory">string theory</a> in</p>
 
 <ul>
-<li>
+<li id="Vafa86">
 <p><a class="existingWikiWord" href="/nlab/show/Cumrun+Vafa">Cumrun Vafa</a>, <em>Modular Invariance and Discrete Torsion on Orbifolds</em>, Nucl.Phys. B273 (1986) 592-606 (<a href="http://inspirehep.net/record/227126/">spire:http://inspirehep.net/record/227126/</a>)</p>
 </li>
 
@@ -912,7 +922,7 @@ margin-left: 0em;
 <p>The higher version of discrete torsion for <a class="existingWikiWord" href="/nlab/show/circle+n-bundle">circle 3-bundles</a> describing the <a class="existingWikiWord" href="/nlab/show/supergravity+C-field">supergravity C-field</a> is discussed in</p>
 
 <ul>
-<li>
+<li id="Sharpe00">
 <p><a class="existingWikiWord" href="/nlab/show/Eric+Sharpe">Eric Sharpe</a>, <em>Analogues of Discrete Torsion for the M-Theory Three-Form</em>, Phys.Rev. D68 (2003) 126004 (<a href="https://arxiv.org/abs/hep-th/0008170">arXiv:hep-th/0008170</a>)</p>
 </li>
 
@@ -952,14 +962,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September  9, 2018 at 14:00:46.
+  Last revised on October 22, 2018 at 06:07:18.
   See the <a href="https://ncatlab.org/nlab/history/discrete torsion" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/discrete+torsion" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/discrete+torsion/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/discrete+torsion" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/discrete+torsion" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/discrete+torsion" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/discrete+torsion/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/discrete+torsion" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/discrete+torsion" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/discrete torsion/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
