--- a/pages/7673.html
+++ b/pages/7673.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/3853/#Item_16" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/3853/#Item_18" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -574,6 +574,7 @@ margin-left: 0em;
 <li><a href='#display_map_categories'>Display map categories</a></li>
 <li><a href='#categories_with_attributes'>Categories with attributes</a></li>
 <li><a href='#categories_with_families'>Categories with families</a></li>
+<li><a href='#natural_models'>Natural Models</a></li>
 <li><a href='#contextual_categories_or_csystems'>Contextual categories, or C-systems</a></li>
 </ul>
 <li><a href='#examples'>Examples</a></li>
@@ -788,7 +789,9 @@ margin-left: 0em;
 <p>Conversely, given a category with attributes, let <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Ty</mi><mo>:</mo><msup><mi>C</mi> <mi>op</mi></msup><mo>→</mo><mi>Set</mi></mrow><annotation encoding="application/x-tex">Ty:C^{op}\to Set</annotation></semantics></math> be the functor corresponding to the discrete fibration <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>E</mi><mo>→</mo><mi>C</mi></mrow><annotation encoding="application/x-tex">E\to C</annotation></semantics></math>, and for <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>A</mi><mo>∈</mo><mi>Ty</mi><mo stretchy="false">(</mo><mi>Γ</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">A\in Ty(\Gamma)</annotation></semantics></math> let <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Tm</mi><mo stretchy="false">(</mo><mi>A</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">Tm(A)</annotation></semantics></math> be the set of <a class="existingWikiWord" href="/nlab/show/sections">sections</a> of the morphism in <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>C</mi></mrow><annotation encoding="application/x-tex">C</annotation></semantics></math> that is the image of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>A</mi></mrow><annotation encoding="application/x-tex">A</annotation></semantics></math> in <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>C</mi> <mi>I</mi></msup></mrow><annotation encoding="application/x-tex">C^I</annotation></semantics></math>. These constructions are inverses up to isomorphism.</p>
 </div>
 
-<p>The following alternative characterization was observed by <a class="existingWikiWord" href="/nlab/show/Steve+Awodey">Steve Awodey</a> (<a href="#Awodey2018">Awodey 2018</a>).</p>
+<h3 id="natural_models">Natural Models</h3>
+
+<p><a class="existingWikiWord" href="/nlab/show/Steve+Awodey">Steve Awodey</a> (<a href="#Awodey2018">Awodey 2018</a>) presented the following “natural model” of type theory as an alternative to categories with families.</p>
 
 <div class="num_theorem">
 <h6 id="theorem">Theorem</h6>
@@ -802,7 +805,9 @@ margin-left: 0em;
 </ol>
 </div>
 
-<p>Which can be restated in terms of representable profunctors as follows. A cwf consists of</p>
+<p>The category <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>C</mi></mrow><annotation encoding="application/x-tex">C</annotation></semantics></math> models the category of contexts and substitutions, and the morphism <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Tm</mi><mo>→</mo><mi>Ty</mi></mrow><annotation encoding="application/x-tex">Tm \to Ty</annotation></semantics></math> models the bundle of (context-dependent) terms over (context-dependent) types. The representability models the extension of a context with a new typed variable.</p>
+
+<p>The condition of being a representable morphism can be reformulated in terms of representable profunctors as follows. A natural model consists of</p>
 
 <ol>
 <li>a category <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>C</mi></mrow><annotation encoding="application/x-tex">C</annotation></semantics></math>,</li>
@@ -811,7 +816,7 @@ margin-left: 0em;
 
 <li>a presheaf <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Tm</mi><mo>:</mo><mover><mrow><mo>∫</mo><mi>Ty</mi></mrow><mo>^</mo></mover></mrow><annotation encoding="application/x-tex">Tm : \widehat {\int Ty}</annotation></semantics></math> of typed terms in context.</li>
 
-<li>a functor <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ext</mi><mo>:</mo><mover><mrow><mo>∫</mo><mi>Ty</mi></mrow><mo>^</mo></mover><mo>→</mo><mi>C</mi></mrow><annotation encoding="application/x-tex">ext : \widehat {\int Ty} \to C</annotation></semantics></math> of context extension that represents the profunctor <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mrow><mo>∫</mo><mi>Tm</mi></mrow><mo stretchy="false">(</mo><mo lspace="verythinmathspace" rspace="0em">−</mo><mo>,</mo><mi>ty</mi><mo>=</mo><mo stretchy="false">)</mo><mo>⊙</mo><mrow><mo>∫</mo><mi>Tm</mi></mrow><mo stretchy="false">(</mo><mi>ctx</mi><mo stretchy="false">(</mo><mi>ty</mi><mo stretchy="false">(</mo><mo lspace="verythinmathspace" rspace="0em">−</mo><mo stretchy="false">)</mo><mo stretchy="false">)</mo><mo>,</mo><mo>=</mo><mo stretchy="false">)</mo><mo>:</mo><mo>∫</mo><mi>Ty</mi><mi>⇸</mi><mi>C</mi></mrow><annotation encoding="application/x-tex">{\int Tm}(-,ty=) \odot {\int Tm}(ctx(ty(-)),=) : \int Ty &amp;#8696; C</annotation></semantics></math> where <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ty</mi><mo>:</mo><mo>∫</mo><mi>Tm</mi><mo>→</mo><mo>∫</mo><mi>Ty</mi></mrow><annotation encoding="application/x-tex">ty : \int Tm \to \int Ty</annotation></semantics></math> and <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ctx</mi><mo>:</mo><mo>∫</mo><mi>Ty</mi><mo>→</mo><mi>C</mi></mrow><annotation encoding="application/x-tex">ctx : \int Ty \to C</annotation></semantics></math> are the projections of the <a class="existingWikiWord" href="/nlab/show/Grothendieck+construction">Grothendieck construction</a>.</li>
+<li>a functor <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ext</mi><mo>:</mo><mover><mrow><mo>∫</mo><mi>Ty</mi></mrow><mo>^</mo></mover><mo>→</mo><mi>C</mi></mrow><annotation encoding="application/x-tex">ext : \widehat {\int Ty} \to C</annotation></semantics></math> of context extension with data that represents the profunctor <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mrow><mo>∫</mo><mi>Tm</mi></mrow><mo stretchy="false">(</mo><mo lspace="verythinmathspace" rspace="0em">−</mo><mo>,</mo><mi>ty</mi><mo>=</mo><mo stretchy="false">)</mo><mo>⊙</mo><mrow><mo>∫</mo><mi>Tm</mi></mrow><mo stretchy="false">(</mo><mi>ctx</mi><mo stretchy="false">(</mo><mi>ty</mi><mo stretchy="false">(</mo><mo lspace="verythinmathspace" rspace="0em">−</mo><mo stretchy="false">)</mo><mo stretchy="false">)</mo><mo>,</mo><mo>=</mo><mo stretchy="false">)</mo><mo>:</mo><mo>∫</mo><mi>Ty</mi><mi>⇸</mi><mi>C</mi></mrow><annotation encoding="application/x-tex">{\int Tm}(-,ty=) \odot {\int Tm}(ctx(ty(-)),=) : \int Ty &amp;#8696; C</annotation></semantics></math> where <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ty</mi><mo>:</mo><mo>∫</mo><mi>Tm</mi><mo>→</mo><mo>∫</mo><mi>Ty</mi></mrow><annotation encoding="application/x-tex">ty : \int Tm \to \int Ty</annotation></semantics></math> and <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ctx</mi><mo>:</mo><mo>∫</mo><mi>Ty</mi><mo>→</mo><mi>C</mi></mrow><annotation encoding="application/x-tex">ctx : \int Ty \to C</annotation></semantics></math> are the projections of the <a class="existingWikiWord" href="/nlab/show/Grothendieck+construction">Grothendieck construction</a>.</li>
 </ol>
 
 <p>Writing the profunctor as P, it is equivalent to the following definition:</p>
@@ -1149,14 +1154,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 19, 2018 at 11:10:17.
+  Last revised on October 22, 2018 at 08:27:01.
   See the <a href="https://ncatlab.org/nlab/history/categorical model of dependent types" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/categorical+model+of+dependent+types" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/categorical+model+of+dependent+types/37" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(37 revisions)</span> | <a href="/nlab/show/diff/categorical+model+of+dependent+types" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/categorical+model+of+dependent+types" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/categorical+model+of+dependent+types" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/categorical+model+of+dependent+types/38" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(38 revisions)</span> | <a href="/nlab/show/diff/categorical+model+of+dependent+types" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/categorical+model+of+dependent+types" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/categorical model of dependent types/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
