--- a/pages/15349.html
+++ b/pages/15349.html
@@ -672,7 +672,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/Subtoposes">Subtoposes</a> of étendues are étendues . K. Rosenthal uses this together with the preceding remark on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>𝒮</mi> <mrow><msup><mi>𝒞</mi> <mi>op</mi></msup></mrow></msup></mrow><annotation encoding="application/x-tex">\mathcal{S}^{\mathcal{C}^{op}}</annotation></semantics></math> for all-monic <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝒞</mi></mrow><annotation encoding="application/x-tex">\mathcal{C}</annotation></semantics></math> in order to construct further étendues <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>Sh</mi> <mi>j</mi></msub><mo stretchy="false">(</mo><msup><mi>𝒮</mi> <mrow><msup><mi>𝒞</mi> <mi>op</mi></msup></mrow></msup><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">Sh_j(\mathcal{S}^{\mathcal{C}^{op}})</annotation></semantics></math> via a topology <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>j</mi></mrow><annotation encoding="application/x-tex">j</annotation></semantics></math> from a suitable functor <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>H</mi><mo>:</mo><mi>𝒞</mi><mo>→</mo><mi>𝒮</mi></mrow><annotation encoding="application/x-tex">H:\mathcal{C}\to\mathcal{S}</annotation></semantics></math> (for further details see <a class="existingWikiWord" href="/nlab/show/J%C3%B3nsson-Tarski+topos">Jónsson-Tarski topos</a> or Rosenthal(1981)).</p>
+<p><a class="existingWikiWord" href="/nlab/show/Subtoposes">Subtoposes</a> of étendues are étendues. K. Rosenthal uses this together with the preceding remark on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>𝒮</mi> <mrow><msup><mi>𝒞</mi> <mi>op</mi></msup></mrow></msup></mrow><annotation encoding="application/x-tex">\mathcal{S}^{\mathcal{C}^{op}}</annotation></semantics></math> for all-monic <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝒞</mi></mrow><annotation encoding="application/x-tex">\mathcal{C}</annotation></semantics></math> in order to construct further étendues <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>Sh</mi> <mi>j</mi></msub><mo stretchy="false">(</mo><msup><mi>𝒮</mi> <mrow><msup><mi>𝒞</mi> <mi>op</mi></msup></mrow></msup><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">Sh_j(\mathcal{S}^{\mathcal{C}^{op}})</annotation></semantics></math> via a topology <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>j</mi></mrow><annotation encoding="application/x-tex">j</annotation></semantics></math> from a suitable functor <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>H</mi><mo>:</mo><mi>𝒞</mi><mo>→</mo><mi>𝒮</mi></mrow><annotation encoding="application/x-tex">H:\mathcal{C}\to\mathcal{S}</annotation></semantics></math> (for further details see <a class="existingWikiWord" href="/nlab/show/J%C3%B3nsson-Tarski+topos">Jónsson-Tarski topos</a> or Rosenthal(1981)).</p>
 </li>
 
 <li>
@@ -749,8 +749,8 @@ margin-left: 0em;
 <p><a class="existingWikiWord" href="/nlab/show/David+Carchedi">David Carchedi</a>, <em>Higher Orbifolds and Deligne-Mumford Stacks as Structured Infinity Topoi</em> , arXiv1312.2204 (2013). (<a href="http://arxiv.org/pdf/1312.2204v1.pdf">pdf</a>)</p>
 </li>
 
-<li>
-<p>|#FreydScedrov90}<a class="existingWikiWord" href="/nlab/show/Peter+Freyd">P. J. Freyd</a>, A. Scedrov, <em><a class="existingWikiWord" href="/nlab/show/Categories%2C+Allegories">Categories, Allegories</a></em> , North-Holland Amsterdam 1990.</p>
+<li id="FreydScedrov90">
+<p><a class="existingWikiWord" href="/nlab/show/Peter+Freyd">P. J. Freyd</a>, A. Scedrov, <em><a class="existingWikiWord" href="/nlab/show/Categories%2C+Allegories">Categories, Allegories</a></em> , North-Holland Amsterdam 1990.</p>
 </li>
 
 <li>
@@ -833,14 +833,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 22, 2018 at 07:42:01.
+  Last revised on October 22, 2018 at 08:30:10.
   See the <a href="https://ncatlab.org/nlab/history/étendue" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/%C3%A9tendue" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/%C3%A9tendue/20" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(20 revisions)</span> | <a href="/nlab/show/diff/%C3%A9tendue" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/%C3%A9tendue" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/%C3%A9tendue" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/%C3%A9tendue/21" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(21 revisions)</span> | <a href="/nlab/show/diff/%C3%A9tendue" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/%C3%A9tendue" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/étendue/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
